# Dust-Mail

./: .dockerignore  .drone.yml  .gitattributes  .gitignore  .lintstagedrc.json  .prettierrc  .versionrc  404.html  CHANGELOG.md  CNAME  Cargo.toml  Dockerfile  Dockerfile.base  LICENSE  Procfile  README.md  docker-compose.yml  entrypoint.sh  fly.toml  index.html  manifest.webmanifest  package.json  pnpm-lock.yaml  pop.drone.yml  sitemap.xml  splashscreen.html  sw.js  sw.js.map  tsconfig.json  tsconfig.node.json  turbo.json  vite.config.ts  workbox-c1760cce.js  workbox-c1760cce.js.map
.github/: FUNDING.yml
apps/server/: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package.json  tsconfig.json
apps/server/config/: config.toml
apps/server/public/: dark.css  oauth.html  oauth.js
apps/server/public/scripts/: oauth.js
apps/server/src/: app.e2e-spec.ts  app.module.ts  constants.rs  constants.ts  http.rs  logger.middleware.ts  main.rs  main.ts  oauth2.rs  utils.rs  xoauth2.d.ts
apps/server/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  constants.ts  jwt-auth.guard.ts  jwt.strategy.ts
apps/server/src/auth/interfaces/: config.interface.ts  jwt.interface.ts  payload.interface.ts  request.interface.ts
apps/server/src/auth/pipes/: mail.pipe.ts  string.pipe.ts
apps/server/src/avatar/: avatar.controller.ts  avatar.module.ts  avatar.service.ts
apps/server/src/cache/: cache.module.ts  cache.service.ts  config.rs  constants.ts  mod.rs
apps/server/src/cache/interfaces/: cache.d.ts
apps/server/src/cache/json/: index.ts
apps/server/src/crypto/: constants.ts  crypto.module.ts  crypto.service.ts
apps/server/src/google/: google.controller.ts  google.module.ts  google.service.ts
apps/server/src/google/incoming/: box.ts  connect.ts  index.ts  message.ts
apps/server/src/google/utils/: exchangeToken.ts  getUser.ts  getUserID.ts
apps/server/src/guards/: limit.rs  mod.rs  user.rs
apps/server/src/imap/: box.ts  client.ts  connect.ts  fetch.ts  imap.module.ts  imap.service.ts  xoauth2.d.ts
apps/server/src/imap/utils/: parseMessage.ts
apps/server/src/mail/: mail.controller.ts  mail.module.ts  mail.service.ts
apps/server/src/mail/google/: constants.ts  exchangeToken.ts
apps/server/src/mail/google/incoming/: box.ts  connect.ts  index.ts  message.ts
apps/server/src/mail/google/interfaces/: config.d.ts
apps/server/src/mail/imap/: index.ts
apps/server/src/mail/imap/utils/: parseMessage.ts
apps/server/src/mail/interfaces/: flags.ts  token.ts
apps/server/src/mail/interfaces/client/: incoming.interface.ts  outgoing.interface.ts
apps/server/src/mail/pipes/: address.pipe.ts
apps/server/src/mail/smtp/: index.ts  send.ts
apps/server/src/routes/: detect.rs  login.rs  logout.rs  mod.rs  settings.rs  version.rs
apps/server/src/routes/mail/: login.rs  logout.rs  mod.rs
apps/server/src/smtp/: client.ts  send.ts  smtp.module.ts  smtp.service.ts
apps/server/src/state/: config.rs  ip.rs  mod.rs  sessions.rs
apps/server/src/state/config/: appearance.rs  authorization.rs  cache.rs  limit.rs  mod.rs  oauth2.rs
apps/server/src/system/: system.controller.ts  system.module.ts  system.service.ts
apps/server/src/types/: error.rs  mod.rs  response.rs
apps/server/src/utils/: cleanHtml.ts  constants.ts  createHash.ts  createIdentifier.ts  createIdentifierFromEnvironment.ts  createOAuthPage.ts  createPassword.ts  createTokenResponse.ts  getOAuthToken.ts  handleError.ts  index.ts  logger.ts  uniqueBy.ts
apps/server/src/utils/guards/: throttler-proxy.guard.ts
apps/server/src/utils/interfaces/: error.interface.ts  message.d.ts
apps/web/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/src-tauri/isolation-dist/: index.html
apps/web/src-tauri/src/: base64.rs  commands.rs  cryptography.rs  files.rs  hash.rs  identifier.rs  keyring.rs  login.rs  main.rs  menu.rs  parse.rs  sessions.rs  tray.rs
apps/web/src-tauri/src/types/: credentials.rs  mod.rs  session.rs
(+290 files in other folders)
