[package]
name = "dust-mail-client"
version = "0.1.4"
description = "A simple material mail client"
authors = ["Guus van Meerveld"]
license = "MIT"
repository = "https://github.com/Guusvanmeerveld/Dust-Mail"
edition = "2021"
rust-version = "1.61"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = ["isolation"] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["devtools", "isolation", "shell-open", "system-tray", "window-close", "window-create"] }
sdk = { path = "../../../packages/sdk", version = "0.1" }
open = "3.0"
base64 = "0.21"
directories = "4.0"
futures = "0.3"
dashmap = "5.4.0"
keyring = "2.0.2"
data-encoding = "2.3.3"
ring = "0.16.20"
whoami = "1.4.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
